--- a/home.html
+++ b/home.html
@@ -4,22 +4,28 @@
       <title>Clock Tower</title>
       <meta charset="utf-8">
       <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
-      <link href="https://fonts.googleapis.com/css?family=Delius+Unicase|Knewave" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Delius+Unicase|Knewave|Allura|Cormorant+SC|Petit+Formal+Script" rel="stylesheet">
 
   </head>
 
   <body>
-    <header>
-      <h1 class="header">Have a Happy Thanksgiving in....</h1>
-    </header>
-    <div class="container">
-      <img src="turkey.png", alt="turkey pilgram cartoon" />
-      <div id='clock'>  </div>
+    <div id="snowflakeContainer">
+      <p class="snowflake">*</p>
     </div>
+    <div id="clockContainer">
+      <h1 class="header">There are </h1>
+      <div class="container">
+        <div id='clock'>  </div>
+      </div>
+      <h1 class="header christmas-phrase">until Christmas</h1>
+    </div>
+
+
     <script
       src="https://code.jquery.com/jquery-3.1.1.js"
       integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
       crossorigin="anonymous"></script>
+    <script src="snow.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
